[package]
name = "warp-sqlite-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.5.0", features = ["transport-io", "macros"] }
rmcp-macros = "0.5.0"
schemars = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "json"] }
regex = "1"
anyhow = "1"
base64 = "0.21"
toml = "0.8"

